# dx12_random

./: .gitignore  CMakeLists.txt  README.md
assets/: arial120.spritefont
directxtk12_desktop_2019.2025.7.10.1/: .signature.p7s
docs/: ARCHITECTURE.md  FILE_STRUCTURE.md
include/core/: Engine.h  IRenderer.h  Logger.h
include/renderers/: DX12Renderer.h  GDIRenderer.h
src/core/: Engine.cpp  main.cpp
src/renderers/: DX12Renderer.cpp  GDIRenderer.cpp
